Bug 1945272 - Make `BRFrame::AccessibleType()` treat its content as normal `<br>` if parent is a viewport frame r=emilio

If `position` of `<br>` is `fixed`, its parent frame is only the viewport
frame, thus, no block frame ancestors causing
`nsBlockFrame::GetNearestAncestorBlock` runs the unreachable case.
Therefore, if the parent frame of the `BRFrame` is a viewport frame, it should
return `a11y::eHTMLBRType` as treating itself as a normal `<br>` rather than
a padding `<br>` element.

Differential Revision: https://phabricator.services.mozilla.com/D237173